@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-dsp-units
  * Created on: 1 февр. 2018 г.
@@ -136,8 +136,8 @@ namespace lsp
 
         typedef struct filter_params_t
         {
-            size_t      nType;      // Filter class
-            size_t      nSlope;     // Filter slope
+            uint32_t    nType;      // Filter class
+            uint32_t    nSlope;     // Filter slope
             float       fFreq;      // Frequency
             float       fFreq2;     // Second frequency (for bandpass/allpass2 filter)
             float       fGain;      // Gain
